Fixed a z-index

--- a/analysis/_assets/styles.css
+++ b/analysis/_assets/styles.css
@@ -306,7 +306,7 @@ p.statsInfo {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 9;
+    z-index: 8;
 }
 
 .fixedHeader .introduction {
